# telemetry

./: README.md  main.py
app/: main.py  requirements.txt
cli/: cli.py
package/: README.md  main.py  pyproject.toml  setup.cfg
package/src/air_telemetry/: __init__.py  endpoint.py
