[metadata]
name = air-telemetry
version = 0.0.1
author = berrysauce
author_email = contact@berrysauce.me
description = Online logger compatible with Telemetry servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berrysauce/telemetry
project_urls =
    Bug Tracker = https://github.com/berrysauce/telemetry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src